# MoCOCrW

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  RELEASING.md  add_function.py  bci.config  build.sh  lsan_suppression.txt
.github/actions/build-docker/: action.yml
.github/workflows/: ci.yml
cmake/: AddressSanitizerTarget.cmake  Doxyfile.in  FindCoverage.cmake  FindLibP11.cmake  MoCOCrWConfig.cmake.in  ThreadSanitizerTarget.cmake
cmake/in/: MoCOCrWConfig.h.in
doc/: CMakeLists.txt  doxify.py  doxygen.sh
doc/examples/: example1.md  example2.md  example3.md  example4.md  example5.md  example_asymm_crypto.md  example_asymm_key.md  example_ca.md  example_ecies.md  example_hash.md  example_kdf.md  example_mac.md  example_main_page.md  example_symm.md  example_x509.md
docker-build-env/: Dockerfile  Dockerfile-With-HSM
dockerfiles/base/: Dockerfile
dockerfiles/base/dilithium-patches/: 0001-CMakeLists.txt-Add-BUILD_TESTING-compile-flag.patch  0006-CMakelists.txt-Add-stack-protector-strong-flag.patch  0007-CMakeLists.txt-Change-target_compile_definition.patch  0008-Add-function-for-pub-key-extraction.patch
dockerfiles/base/hsm-patches/: new_0001-Introduce-generic-keypair-generation-interface-and-e.patch
dockerfiles/feature-support/: Dockerfile
dockerfiles/feature-support/dilithium-patches/: 0001-Add-code-to-enable-cmake-to-install-static-libraries.patch  0002-CMakeLists-Change-target_compile_definition-to-PRIVA.patch  0002-CMakeLists.txt-Enable-parallel-test-execution.patch  0003-Add-function-for-pub-key-extraction.patch  0003-CMakeLists.txt-Enable-PIE-compilation-flag.patch  0004-CMakeLists.txt-Add-UBSAN-and-ASAN-build-types.patch  0005-CMakeLists.txt-Add-cmake-install-target.patch
dockerfiles/hsm-support/: 0001-Introduce-generic-keypair-generation-interface-and-e.patch  Dockerfile
examples/: CMakeLists.txt  aes-example.cpp  aes_example.cpp  aes_example.h  aes_main.cpp  ca-csr-example.cpp  ca_example.cpp  ca_example.h  ca_main.cpp  cert-validation.cpp  common.h  csr_example.cpp  csr_example.h  csr_main.cpp  dilithium-keys  dsa_example.cpp  ecies-example.cpp  ecies_example.cpp  ecies_example.h  ecies_main.cpp  example-ca.json  hash-example.cpp  hash_example.cpp  hash_example.h  hash_main.cpp  hsm-example.cpp  hsm-gen-example.cpp  hsm-store-example.cpp  kdf-example.cpp  kdf_example.cpp  kdf_example.h  kdf_main.cpp  key-example.cpp  key_example.cpp  key_example.h  key_main.cpp  mac-example.cpp  mac_example.cpp  mac_example.h  mac_main.cpp  (+9 more)
scripts/: check_format.sh  setupSoftHsm.sh  teardownSoftHsm.sh
src/: CMakeLists.txt  asn1time.cpp  asymmetric_crypto_ctx.cpp  asymmetric_encryption.cpp  basic_constraints.cpp  bio.cpp  ca.cpp  crl.cpp  csr.cpp  dilithium.cpp  distinguished_name.cpp  ecies.cpp  format_utils.h  hash.cpp  hsm.cpp  kdf.cpp  key.cpp  key_usage.cpp  mac.cpp  openssl_lib.cpp  openssl_wrap.cpp  p11_lib.cpp  p11_wrap.cpp  padding_mode.cpp  parsingUtils.cpp  pkcs11_hsm.cpp  signature.cpp  subject_key_identifier.cpp  symmetric_crypto.cpp  symmetric_memory.cpp  util.cpp  x509.cpp
src/cppc/: checkcall.hpp
src/mococrw/: asn1time.h  asymmetric_crypto_ctx.h  asymmetric_encryption.h  basic_constraints.h  bio.h  ca.h  crl.h  csr.h  dilithium.h  distinguished_name.h  ecies.h  error.h  extension.h  hash.h  hsm.h  kdf.h  key.h  key_usage.h  mac.h  openssl_lib.h  openssl_wrap.h  p11_lib.h  p11_wrap.h  padding_mode.h  sign_params.h  signature.h  stack_utils.h  subject_key_identifier.h  symmetric_crypto.h  symmetric_memory.h  util.h  x509.h
src/mococrw/private/: IOUtils.h  parsingUtils.h
tests/: CMakeLists.txt
tests/certs/: README  openssl.cnf
tests/examples/: CMakeLists.txt  common.py  test_aes.py  test_ca_and_csr.py  test_ecies.py  test_hash.py  test_kdf.py  test_key.py  test_mac.py  test_rsa.py  test_sig.py
tests/integration/: CMakeLists.txt  attribute_reader.cpp  hsm-integration-test-wrapper.sh  hsm-integration-test.cpp  pkcs11.h
tests/integration/test-data/: check_config.json  get_slot_id_by_label.py  pkcs11_to_json.py  private_key_attribute_validator.py
tests/sdk/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  CMakeLists.txt.orig  ExecUtil.h  IOUtils.h  hsm_mock.h  openssl_lib_mock.cpp  openssl_lib_mock.h  p11_lib_mock.cpp  p11_lib_mock.h  test_asn1time.cpp  test_asymencryption.cpp  test_asymmetric_encryption.cpp  test_bio.cpp  test_ca.cpp  test_cmac.cpp  test_crl.cpp  test_crypto_data.cpp  test_csr.cpp  test_csr.cpp.orig  test_dilithium.cpp  test_distinguished_name.cpp  test_ecies.cpp  test_hash.cpp  test_hmac.cpp  test_hsm.cpp  test_kdf.cpp  test_key.cpp  test_mac.cpp  test_opensslwrapper.cpp  test_p11wrapper.cpp  test_padding_mode.cpp  test_signature.cpp  test_symmetric_crypto.cpp  test_symmetric_memory.cpp  test_util.cpp  test_verification.cpp  test_x509.cpp  test_x509.cpp.orig
tests/unit/dilithium-keys/: dilithium3-private-key.der  dilithium3-private-key.raw  dilithium3-public-key.der  dilithium3-public-key.raw  dilithium3-test-signature.raw  dilithium5-private-key.der  dilithium5-private-key.raw  dilithium5-public-key.der  dilithium5-public-key.raw  dilithium5-test-signature.raw  message.raw
tests/unit/test-certs/: eccExpiredcertificate.pem  eccIntermediateCertificate.pem  eccRootCertificate.pem  eccUserCertificate.pem  expiredCA.pem  root1.cert1.pem  root1.der  root1.expired.pem  root1.future.pem  root1.int1.cert1.pem  root1.int1.int11.cert1.pem  root1.int1.int11.cert2.pem  root1.int1.int11.pem  root1.int1.pem  root1.int2.int21.cert1.pem  root1.int2.int21.pem  root1.int2.pem  root1.pem  root1.pubkey.pem  root2.int1.cert1.pem  root2.int1.pem  root2.pem  root3.crl.der  root3.crl.pem  root3.crl_empty.pem  root3.crl_expired.pem  root3.crl_invalidsignature.pem  root3.int1.cert.pem  root3.int1.cert12.pem  root3.int1.crl.pem  root3.int1.crl_empty.pem  root3.int1.crl_otherentry.pem  root3.int1.int11.crl_empty.pem  root3.int1.int11.pem  root3.int1.pem  root3.pem  signCertificate.pem  year1970.pem  year2049.pem  year2050.pem  (+1 more)
utils/: IOUtils.h  parsingUtils.cpp  parsingUtils.h
(+90 files in other folders)
